Modified user display and header

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,11 @@
-<div fxLayout="row" fxLayoutAlign="space-between center" class="header">
-    <div class="header__title">
-       RLM Demo Application
-    </div>
-    <div>
+<div class="container header">
+  <div class="row">
+    <div class="col">RLM Demo Application</div>
+    
+  </div>
+  <div class="row justify-content-end">
+    <div class="col-2">
         <app-user-display></app-user-display>
     </div>
+  </div>
 </div>
