--- a/src/app/shared/components/user-display/user-display.component.html
+++ b/src/app/shared/components/user-display/user-display.component.html
@@ -1,9 +1,9 @@
-<div fxLayout="column" fxLayoutAlign="start stretch">
-    <div fxLayout="row" fxLayoutGap="0.5rem" fxLayoutAlign="center start">
-        <div>
+<div class="container">
+    <div class="row justify-content-end">
+        <div class="col-4">
             {{myUser.firstName}}
         </div>
-        <div>
+        <div class="col-4">
             {{myUser.lastName}}
         </div>
     </div>
