--- a/src/app/layouts/pages/registered/registered.component.html
+++ b/src/app/layouts/pages/registered/registered.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
-<p>registered works!</p>
+<div class="container">
+    <app-header class="row"></app-header>
+    <app-home class="row"></app-home>
+</div>
