--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="container header">
   <div class="row">
-    <div class="col">RLM Demo Application</div>
+    <div class="col">Salesforve RLM Demo</div>
     
   </div>
   <div class="row justify-content-end">
