--- a/src/assets/constants.scss
+++ b/src/assets/constants.scss
@@ -1,5 +1,5 @@
 
-$primary-color: #00796b;
+$primary-color: #F26724;
 $primary-light-color: #48a999;
 $primary-dark-color: #004c40;
 
@@ -7,6 +7,6 @@ $secondary-color: #ffc107;
 $secondary-light-color: #fff350;
 $secondary-dark-color: #c79100;
 
-$text-color-primary: #fff;
-$text-color-secondary: #000;
+$text-color-primary: #000;
+$text-color-secondary: #fff;
 
