--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../assets/constants.scss';
 
 .header {
-    background-color: $primary-color;
+    background-color: white;
     color: $text-color-primary;
     padding: 0.5rem;
 
