RLM-114 Include configure component

--- a/src/app/modules/configure/components/configure/configure.component.html
+++ b/src/app/modules/configure/components/configure/configure.component.html
@@ -1,1 +1,10 @@
-<p>configure works!</p>
+<div class="container configure-container">
+  <div class="row">
+    <div class="col-12 col-md-8 col-lg-9">
+      <h1 class="page-title">Configure</h1>
+      <p class="page-description">{{ getDescription() }}</p>
+      <h3>{{ getProductName() }}</h3>
+    </div>
+    <div class="col-12 col-md-4 col-lg-3"></div>
+  </div>
+</div>
