Added footer and catagory display, changed routing

--- a/src/app/layouts/pages/registered/registered.component.html
+++ b/src/app/layouts/pages/registered/registered.component.html
@@ -1,4 +1,6 @@
 <div class="container">
-    <app-header class="row"></app-header>
-    <app-home class="row"></app-home>
+  <div class="row"><app-header></app-header></div>
+
+  <div class="row"><router-outlet /></div>
+  <div class="row"><app-footer></app-footer></div>
 </div>
