--- a/src/app/modules/home/components/category-carousel/category-carousel.component.html
+++ b/src/app/modules/home/components/category-carousel/category-carousel.component.html
@@ -1,1 +1,18 @@
-<p>category-carousel works!</p>
+<div class="container">
+  <div class="row justify-content-evenly">
+  <ng-container *ngFor="let cat of categories">
+    <div class="card" style="width: 20rem;">
+      <img src="assets/computer_1.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{cat.name}}</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="row justify-content-evenly">
+          <a href="#" class="btn btn-primary col">Configure & Buy</a>
+          <a href="#" class="btn btn-secondary col">View Specs</a>
+        </div>
+
+      </div>
+    </div>
+  </ng-container>
+</div>
+</div>
