--- a/src/app/modules/home/components/category-nav/category-nav.component.html
+++ b/src/app/modules/home/components/category-nav/category-nav.component.html
@@ -1,1 +1,31 @@
-<p>category-nav works!</p>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Go To</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ng-container *ngIf="categories">
+        <ul class="navbar-nav">
+          <ng-container *ngFor="let cat of categories">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page">{{
+                cat.name
+              }}</a>
+            </li>
+          </ng-container>
+        </ul></ng-container
+      >
+    </div>
+  </div>
+</nav>
+
+
