RLM-114 Adding configure route page

--- a/src/app/modules/configure/components/configure/configure.component.html
+++ b/src/app/modules/configure/components/configure/configure.component.html
@@ -3,8 +3,15 @@
     <div class="col-12 col-md-8 col-lg-9">
       <h1 class="page-title">Configure</h1>
       <p class="page-description">{{ getDescription() }}</p>
-      <h3>{{ getProductName() }}</h3>
+      <h3 class="mt-5 mb-4">{{ getProductName() }}</h3>
+      <div class="configure-steps bg-light bg-gradient p-3">
+        <h3>Configure steps</h3>
+      </div>
     </div>
-    <div class="col-12 col-md-4 col-lg-3"></div>
+    <div class="col-12 col-md-4 col-lg-3">
+      <div class="order-summary bg-light bg-gradient p-3">
+        <h3>Order Summary</h3>
+      </div>
+    </div>
   </div>
 </div>
